Updated mem madness

--- a/memory-madness/.godot/global_script_class_cache.cfg
+++ b/memory-madness/.godot/global_script_class_cache.cfg
@@ -1,1 +1,41 @@
-list=[]
+list=[{
+"base": &"Resource",
+"class": &"ImageFilesListResource",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/image_files_list_resource.gd"
+}, {
+"base": &"EditorScript",
+"class": &"ImageFiller",
+"icon": "",
+"is_abstract": false,
+"is_tool": true,
+"language": &"GDScript",
+"path": "res://tools/image_filler.gd"
+}, {
+"base": &"Object",
+"class": &"LevelDataSelector",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/level_data_selector.gd"
+}, {
+"base": &"Resource",
+"class": &"LevelSettingResource",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/level_setting_resource.gd"
+}, {
+"base": &"Resource",
+"class": &"LevelsDataResource",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://classes/levels_data_resource.gd"
+}]
