--- a/memory-madness/.godot/editor/editor_layout.cfg
+++ b/memory-madness/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://icon.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://resources/levels_data.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://tools/", "res://resources/", "res://globals/", "res://classes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-1101
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -32,8 +32,8 @@ open_scenes=PackedStringArray("res://scenes/master/master.tscn")
 current_scene="res://scenes/master/master.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -43,8 +43,8 @@ position=Vector2i(0, 62)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://tools/image_filler.gd", "res://globals/image_manager.gd", "res://classes/levels_data_resource.gd", "res://classes/level_data_selector.gd", "res://classes/level_setting_resource.gd"]
+selected_script="res://classes/level_data_selector.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
