--- a/memory-madness/.godot/editor/editor_layout.cfg
+++ b/memory-madness/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://resources/levels_data.tres")
+dock_filesystem_selected_paths=PackedStringArray("res://resources/level_button_48_label_settings.tres")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://tools/", "res://resources/", "res://globals/", "res://classes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -19,8 +19,8 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-1101
+dock_hsplit_2=348
+dock_hsplit_3=-527
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,23 +28,23 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/master/master.tscn")
-current_scene="res://scenes/master/master.tscn"
+open_scenes=PackedStringArray("res://scenes/master/master.tscn", "res://scenes/main/main.tscn", "res://scenes/level_button/level_button.tscn", "res://scenes/front_sprite/front_sprite.tscn")
+current_scene="res://scenes/main/main.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 62)
+position=Vector2i(0, 80)
 
 [ScriptEditor]
 
-open_scripts=["res://tools/image_filler.gd", "res://globals/image_manager.gd", "res://classes/levels_data_resource.gd", "res://classes/level_data_selector.gd", "res://classes/level_setting_resource.gd"]
-selected_script="res://classes/level_data_selector.gd"
+open_scripts=["res://scenes/front_sprite/front_sprite.gd", "res://tools/image_filler.gd", "res://globals/image_manager.gd", "res://classes/levels_data_resource.gd", "res://scenes/level_button/level_button.gd", "res://classes/level_data_selector.gd", "res://classes/level_setting_resource.gd"]
+selected_script="res://scenes/front_sprite/front_sprite.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(1526, 642, 2066, 1606)
+floating_window_rect=Rect2i(766, 380, 2066, 1606)
 floating_window_screen=0
 
 [ShaderEditor]
