--- a/memory-madness/.godot/editor/script_editor_cache.cfg
+++ b/memory-madness/.godot/editor/script_editor_cache.cfg
@@ -31,10 +31,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -73,10 +73,38 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 8,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/level_button/level_button.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/front_sprite/front_sprite.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 56,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 37,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
