--- a/memory-madness/.godot/global_script_class_cache.cfg
+++ b/memory-madness/.godot/global_script_class_cache.cfg
@@ -1,4 +1,12 @@
 list=[{
+"base": &"TextureRect",
+"class": &"FrontSprite",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/front_sprite/front_sprite.gd"
+}, {
 "base": &"Resource",
 "class": &"ImageFilesListResource",
 "icon": "",
@@ -14,6 +22,14 @@ list=[{
 "is_tool": true,
 "language": &"GDScript",
 "path": "res://tools/image_filler.gd"
+}, {
+"base": &"TextureButton",
+"class": &"LevelButton",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/level_button/level_button.gd"
 }, {
 "base": &"Object",
 "class": &"LevelDataSelector",
