--- a/memory-madness/.godot/editor/editor_layout.cfg
+++ b/memory-madness/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://resources/level_button_48_label_settings.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://tools/", "res://resources/", "res://globals/", "res://classes/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://tools/", "res://scenes/", "res://scenes/main/", "res://resources/", "res://globals/", "res://classes/", "res://assets/", "res://assets/frames/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=348
-dock_hsplit_3=-527
+dock_hsplit_3=-526
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/master/master.tscn", "res://scenes/main/main.tscn", "res://scenes/level_button/level_button.tscn", "res://scenes/front_sprite/front_sprite.tscn")
-current_scene="res://scenes/main/main.tscn"
+open_scenes=PackedStringArray("res://scenes/master/master.tscn", "res://scenes/main/main.tscn", "res://scenes/level_button/level_button.tscn", "res://scenes/front_sprite/front_sprite.tscn", "res://scenes/game/game.tscn", "res://scenes/memory_tile/memory_tile.tscn")
+current_scene="res://scenes/memory_tile/memory_tile.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -43,8 +43,8 @@ position=Vector2i(0, 80)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/front_sprite/front_sprite.gd", "res://tools/image_filler.gd", "res://globals/image_manager.gd", "res://classes/levels_data_resource.gd", "res://scenes/level_button/level_button.gd", "res://classes/level_data_selector.gd", "res://classes/level_setting_resource.gd"]
-selected_script="res://scenes/front_sprite/front_sprite.gd"
+open_scripts=["res://scenes/front_sprite/front_sprite.gd", "res://scenes/game/game.gd", "res://tools/image_filler.gd", "res://globals/image_manager.gd", "res://classes/levels_data_resource.gd", "res://scenes/level_button/level_button.gd", "res://classes/level_data_selector.gd", "res://classes/level_setting_resource.gd", "res://scenes/master/master.gd", "res://scenes/memory_tile/memory_tile.gd", "res://globals/signal_hub.gd", "res://globals/sound_manager.gd"]
+selected_script="res://scenes/memory_tile/memory_tile.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
