--- a/memory-madness/.godot/editor/quick_open_dialog_cache.cfg
+++ b/memory-madness/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,6 +1,8 @@
 [selected_history]
 
-Texture2D=PackedStringArray("uid://cm3x4oiekoxmy", "uid://b8n874uu1887m", "uid://csyrgkk7bmaer", "uid://dyyo4405gtelv", "uid://issuohsrs4u2")
+Texture2D=PackedStringArray("uid://batwhvd8q4bsg", "uid://bd41objtmfeaq", "uid://uxopsjhnkjuk", "uid://dk16kfwtqa4yi", "uid://ceu42wmi08uyy", "uid://cfdyqoybqtnnr", "uid://cm3x4oiekoxmy", "uid://b8n874uu1887m", "uid://csyrgkk7bmaer", "uid://dyyo4405gtelv", "uid://issuohsrs4u2")
 Font=PackedStringArray("uid://xdd3sguxmrw4")
-PackedScene=PackedStringArray("uid://jj3mpvi6j1ub", "uid://da7tu5axwthyf", "uid://c4fyfnu4l4ki7")
+PackedScene=PackedStringArray("uid://v3bn5nusx3tk", "uid://5rq82ik7i04h", "uid://jj3mpvi6j1ub", "uid://da7tu5axwthyf", "uid://c4fyfnu4l4ki7")
 AudioStream=PackedStringArray("uid://cuufe6urwkkkb", "uid://dgipa853o3aog", "uid://bayodqx3jpdhp")
+LabelSettings=PackedStringArray("uid://8u5ogyymqoqj", "uid://c5htp8w5kcud3")
+Resource=PackedStringArray("uid://clxmbs7nchp8j", "uid://s6orn0lr06x0")
