--- a/memory-madness/.godot/global_script_class_cache.cfg
+++ b/memory-madness/.godot/global_script_class_cache.cfg
@@ -7,6 +7,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://scenes/front_sprite/front_sprite.gd"
 }, {
+"base": &"Control",
+"class": &"Game",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/game/game.gd"
+}, {
 "base": &"Resource",
 "class": &"ImageFilesListResource",
 "icon": "",
@@ -54,4 +62,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://classes/levels_data_resource.gd"
+}, {
+"base": &"TextureButton",
+"class": &"MemoryTile",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/memory_tile/memory_tile.gd"
 }]
